--- a/app/components/Navigation/NavLinkList/NavList.module.css
+++ b/app/components/Navigation/NavLinkList/NavList.module.css
@@ -16,19 +16,21 @@
   box-sizing: border-box;
   margin: auto;
   width: 50%;
+  height: 100%;
   font-family: Rubik, sans-serif;
   color: var(--white);
   font-weight: 800;
   text-transform: uppercase;
   font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 
   @media only screen and (max-width: 426px) {
     width: 100%;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
   }
 }
 
@@ -64,11 +66,3 @@
   font-weight: 900;
 }
 
-.button {
-  margin: auto;
-  display: flex;
-  width: min-content;
-  height: 100%;
-  flex-direction: column;
-  place-content: center;
-}
